samples/_failures_safe/1761404872_ba6c15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e71e388.c: In function ‘process_compression’:
./samples/SAFE/__tmp_5e71e388.c:140:16: error: missing terminating " character
  140 |         printf("Compression failed\n
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5e71e388.c:140:9: error: expected expression at end of input
  140 |         printf("Compression failed\n
      |         ^~~~~~
./samples/SAFE/__tmp_5e71e388.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e71e388.c:140:9: error: expected declaration or statement at end of input
